# rsimageconvertor

./: README.md  pyproject.toml  setup.py
RS_Image_Convertor.egg-info/: PKG-INFO  SOURCES.txt
rsimageconvertor/: __init__.py  convertor.py  resize.py
rsimageconvertor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rsimageconvertor/rsconvertor/: __init__.py  convertor.py
rsimageconvertor/rsimageconvertor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rsimageconvertor/: convertor.py
